delete spot on mobile details page now works. can back out of add spot mobile (cancel) w/o issue. fixed hyperlink blue color -> white on add spot full.

--- a/css/add_spot_full.css
+++ b/css/add_spot_full.css
@@ -47,6 +47,10 @@ body,
   border-color: white;
 }
 
+.hlink {
+  color: white;
+}
+
 .hlink:hover {
   background-color: rgba(255, 255, 255, 0.5);
   text-decoration: underline;
